tests/errors/void-in-expr.knv
fn main() -> void {
    let x = noop();
    exit x;
}

fn noop() -> void {
}
